--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -65,6 +65,7 @@
   }
 }
 .contactForm {
+  z-index: 1;
   margin-top: -20px;
   padding: 30px;
   box-shadow: 2vw 2vw $dustyorange;
