--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -9,10 +9,11 @@ header {
     height: 100%;
   }
   nav {
+    position: relative;
     display: flex;
     justify-content: center;
     padding-top: 10px;
-    z-index: 1;
+    z-index: 2;
     ul {
       z-index: 6;
       display: flex;
