--- a/styles/sass/partials/_tabletMediaQueries.scss
+++ b/styles/sass/partials/_tabletMediaQueries.scss
@@ -3,6 +3,7 @@
     min-height: 50vh;
     nav {
       padding-top: 15px;
+      position: static;
       .navLogo {
         display: block;
       }
